# extract-py

./: .gitignore  AUTHORS.md  Makefile  README.md  config.py  develop.db  pyproject.toml
extract/: __init__.py  apd29.odt  app.py  chart.py  cli.py  model.py  odt2txt.sh  parser.py  schema.py  utils.py  views.py
extract-py/: app.py
extract-py/data_examples/: example1.odt
extract-py/static/css/: index.css
extract-py/static/js/: camdex_dt.js  camdex_info_dt.js
extract-py/templates/: base.html  index.html  patient_selector.html  patients.html
extract.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
extract/data_examples/: apd29.txt  example2.odt
extract/static/css/: index.css
extract/static/css/bootstrap/: mdb.min.css
extract/static/js/: camdex_dt.js  camdex_info_dt.js  edit_patient_dt.js  extract.js  index.js
extract/static/js/bootstrap/: mdb.min.js
extract/static/js/plotly/: plotly-latest.min.js
extract/static/js/plotly_charts/: ac_chart.js  cal_chart.js  ct_chart.js  lc_chart.js  lp_chart.js  lt_chart.js  ma_chart.js  mec_chart.js  mmse_chart.js  mrec_chart.js  mrem_chart.js  mt_chart.js  ori_chart.js  pabs_chart.js  pr_chart.js  ptv_chart.js  ryh_chart.js
extract/templates/: base.html  charts.html  edit.html  index.html  login.html  messages.html  patient_selector.html  patients.html  register.html
