[tool.poetry]
name = "extract-py"
version = "0.1.0"
description = "Final project of Computer Science degree by Omar Mendo Mesa"
authors = ["Omar Mendo <omen.mesa20@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
