[tool.poetry]
name = "extract"
version = "0.1.0"
description = "Final project of Computer Science degree by Omar Mendo Mesa"
authors = ["Omar Mendo <omen.mesa20@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.0"
flask-sqlalchemy = "^2.4"
flask-migrate = "^2.5"
flask-marshmallow = "^0.10.1"
marshmallow-sqlalchemy = "^0.17.0"
marshmallow_sqlalchemy = "^0.17.0"
plotly = "^4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
